2002-01-16  Mike Oliphant  <oliphant@gtk.org>

	* grip.spec: added Epoch: 1 to allow upgrading from redhat rpms
	  (thanks to Tim Powers for this)
	* grip.spec: put the Icon back
	* configure.in/grip.spec: upped version to 2.98.1
	
2002-01-13  Mike Oliphant  <oliphant@gtk.org>

	* discdb.c: don't overwrite with blank genre on lookup
	* configure.in: added option to link id3lib statically
	* gripcfg.c: gettextized
	* cddev.c: gettextized
	* cdplay.c: gettextized
	* dialog.c: gettextized
	* discdb.c: gettextized
	* discedit.c: gettextized
	* grip.c: gettextized
	* id3.c: gettextized
	* launch.c: gettextized
	* parsecfg.c: gettextized
	* rip.c: gettextized
	* launch.c: fixed TranslateAndLaunch (cd update program now works)
	* launch.c/rip.c/cdplay.c/grip.c: changed how IO redirect works
	* rip.c: Added option to kill just the rip process
	* configure.in/grip.spec: upped version to 2.98.0 (not 2.9.8 -- to
	  make it sequence after 2.96 in rpms/debs)
	
2002-01-08  Mike Oliphant  <oliphant@gtk.org>

	* discedit.c: fixed a crashing problem on track edit focus out
	* cdplay.c: reset year, id3, and track title/artist on eject
	* rip.c: increased number of args to rip/enc commandlines to 100
	  (thanks to David J. MacKenzie for pointing this out)
	* discdb.c: changed wrap trigger to 70 chars on submissions
	* discedit.c/cdplay.c/rip.c: only do CheckDupNames just before
	  starting to rip
	* grip.h: added '-i' to sendmail commandline
	* grip.c/grip.h/gripcfg.c/rip.c/rip.h/cdpar.c: generic SCSI device
	  is now overridable when using builtin cdparanoia
	* grip.c: use gripicon.png as window icon
	* configure.in: adding config check for id3lib (thanks to Goetz
	  Waschk for this)
	* various: renamed id3.h grip_id3.h
	* grip.c/grip.h/gripcfg.c/rip.c: made id3v2 tagging optional if
	  id3lib is installed
	* discdb.c: added support for multiple exact matches
	* discdb.c: changed protocol level to 5
	* discdb.c/id3.c: added grabbing id3 genre from DGENRE