@@ -2,7 +2,7 @@
 <HTML
 ><HEAD
 ><TITLE
->CDDB notes</TITLE
+>Reporting Bugs / Sumitting Patches</TITLE
 ><META
 NAME="GENERATOR"
 CONTENT="Modular DocBook HTML Stylesheet Version 1.64
@@ -11,11 +11,11 @@ REL="HOME"
 TITLE="Grip User's Guide"
 HREF="grip.html"><LINK
 REL="PREVIOUS"
-TITLE="Reporting Bugs / Sumitting Patches"
-HREF="bugs.html"><LINK
+TITLE="Getting More Help"
+HREF="morehelp.html"><LINK
 REL="NEXT"
-TITLE="License and Disclaimer"
-HREF="license.html"></HEAD
+TITLE="CDDB notes"
+HREF="cddb.html"></HEAD
 ><BODY
 CLASS="CHAPTER"
 BGCOLOR="#FFFFFF"
@@ -42,7 +42,7 @@ WIDTH="10%"
 ALIGN="left"
 VALIGN="bottom"
 ><A
-HREF="bugs.html"
+HREF="morehelp.html"
 >&#60;&#60;&#60; Previous</A
 ></TD
 ><TD
@@ -55,7 +55,7 @@ WIDTH="10%"
 ALIGN="right"
 VALIGN="bottom"
 ><A
-HREF="license.html"
+HREF="cddb.html"
 >Next &#62;&#62;&#62;</A
 ></TD
 ></TR
@@ -67,18 +67,17 @@ WIDTH="100%"></DIV
 CLASS="CHAPTER"
 ><H1
 ><A
-NAME="CDDB"
->CDDB notes</A
+NAME="BUGS"
+>Reporting Bugs / Sumitting Patches</A
 ></H1
 ><P
->I have declined to sign a license
-      agreement with Escient, the company who owns "www.cddb.com" and runs
-      the CDDB server "us.cddb.com". Their license would (among other
-      things) have required me to place advertisements in Grip and restrict
-      you, the user, to use only their databases. I am against this
-      commercial use of the track information submitted by users such as
-      yourself. For this reason, I encourage you to use free servers, such
-      as freedb.org.</P
+>To report a bug with Grip, or to submit a patch. Please do so at
+    the <A
+HREF="http://sourceforge.net/projects/grip"
+TARGET="_top"
+>Grip
+    section</A
+> on sourceforge.net.</P
 ></DIV
 ><DIV
 CLASS="NAVFOOTER"
@@ -95,7 +94,7 @@ WIDTH="33%"
 ALIGN="left"
 VALIGN="top"
 ><A
-HREF="bugs.html"
+HREF="morehelp.html"
 >&#60;&#60;&#60; Previous</A
 ></TD
 ><TD
@@ -111,7 +110,7 @@ WIDTH="33%"
 ALIGN="right"
 VALIGN="top"
 ><A
-HREF="license.html"
+HREF="cddb.html"
 >Next &#62;&#62;&#62;</A
 ></TD
 ></TR
@@ -120,7 +119,7 @@ HREF="license.html"
 WIDTH="33%"
 ALIGN="left"
 VALIGN="top"
->Reporting Bugs / Sumitting Patches</TD
+>Getting More Help</TD
 ><TD
 WIDTH="34%"
 ALIGN="center"
@@ -130,7 +129,7 @@ VALIGN="top"
 WIDTH="33%"
 ALIGN="right"
 VALIGN="top"
->License and Disclaimer</TD
+>CDDB notes</TD
 ></TR
 ></TABLE
 ></DIV
