@@ -14,8 +14,8 @@ REL="PREVIOUS"
 TITLE="Configuring Grip"
 HREF="configure.html"><LINK
 REL="NEXT"
-TITLE="CDDB notes"
-HREF="cddb.html"></HEAD
+TITLE="Getting More Help"
+HREF="morehelp.html"></HEAD
 ><BODY
 CLASS="CHAPTER"
 BGCOLOR="#FFFFFF"
@@ -55,7 +55,7 @@ WIDTH="10%"
 ALIGN="right"
 VALIGN="bottom"
 ><A
-HREF="cddb.html"
+HREF="morehelp.html"
 >Next &#62;&#62;&#62;</A
 ></TD
 ></TR
@@ -200,7 +200,7 @@ WIDTH="33%"
 ALIGN="right"
 VALIGN="top"
 ><A
-HREF="cddb.html"
+HREF="morehelp.html"
 >Next &#62;&#62;&#62;</A
 ></TD
 ></TR
@@ -219,7 +219,7 @@ VALIGN="top"
 WIDTH="33%"
 ALIGN="right"
 VALIGN="top"
->CDDB notes</TD
+>Getting More Help</TD
 ></TR
 ></TABLE
 ></DIV
