@@ -110,6 +110,16 @@ HREF="faq.html"
 ></DT
 ><DT
 ><A
+HREF="morehelp.html"
+>Getting More Help</A
+></DT
+><DT
+><A
+HREF="bugs.html"
+>Reporting Bugs / Sumitting Patches</A
+></DT
+><DT
+><A
 HREF="cddb.html"
 >CDDB notes</A
 ></DT
