@@ -3,3 +3,5 @@ cdplayer.html	 Playing CDs with Grip
 riping.html	 Ripping CDs with Grip
 configure.html	 Configuring Grip
 faq.html	 FAQ
+morehelp.html	 Getting More Help
+bugs.html	 Reporting Bugs
