@@ -1,3 +1,8 @@
+2002-01-17  Mike Oliphant  <oliphant@gtk.org>
+
+	* grip.sgml/grip.c: added some more documentation
+	* configure.in/grip.spec: upped versiont to 2.98.2
+
 2002-01-16  Mike Oliphant  <oliphant@gtk.org>
 
 	* grip.spec: added Epoch: 1 to allow upgrading from redhat rpms
